<resources>
    <string name="app_name">Realtime Lecture Feedback</string>
    <string name="delete">Löschen</string>

    <!-- Abstimmung -->
    <string name="VoteFragButtonA">A</string>
    <string name="VoteFragButtonB">B</string>
    <string name="VoteFragButtonC">C</string>
    <string name="VoteFragButtonD">D</string>
    <string name="VoteFragHeader">Abstimmung</string>
    <string name="VoteFragSendTxt">Senden</string>

    <!-- Session erstellen-->
    <string name="title_activity_create_session">Neue Sitzung</string>
    <string name="action_settings">Einstellungen</string>


    <string name="SessionStart">Sitzung starten</string>
    <string name="SessionIdText">Sitzungs ID</string>
    <string name="SessionEnter">Sitzung beitreten</string>
    <string name="OwnedSession">Eigene Sitzungen</string>

    <!-- Session liste-->
    <string name="SessionList">Eigene Sitzungen</string>
    <string name="SessionDeleteQuestion">Sitzung löschen?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_live">StudentLiveActivity</string>
    <string name="signal">Melden</string>
    <string name="break1">Pause</string>

    <string name="hello_world">Hello world!</string>
    <string name="btnCreateText">Erstellen</string>
</resources>
