
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="org.milderjoghurt.rlf.android.VoteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/VoteFragHeader"
        android:id="@+id/txtVoteHeader"
        android:textStyle="bold"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="50sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center"
        android:useDefaultMargins="true"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="40sp"
        android:rowOrderPreserved="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VoteFragButtonA"
            android:id="@+id/btnVoteA"
            android:textSize="40sp"
            android:singleLine="true"
            android:paddingLeft="60dp"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:paddingBottom="30dp"
            android:background="@color/vote_button_unselected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VoteFragButtonB"
            android:id="@+id/btnVoteB"
            android:textSize="40sp"
            android:singleLine="true"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:background="@color/vote_button_unselected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VoteFragButtonC"
            android:id="@+id/btnVoteC"
            android:singleLine="true"
            android:textSize="40sp"
            android:paddingLeft="60dp"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:paddingBottom="30dp"
            android:background="@color/vote_button_unselected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VoteFragButtonD"
            android:id="@+id/btnVoteD"
            android:textSize="40sp"
            android:singleLine="true"
            android:paddingLeft="60dp"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:paddingBottom="30dp"
            android:background="@color/vote_button_unselected" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/VoteFragSendTxt"
            android:id="@+id/btnVoteSend"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textSize="28sp"
            android:background="@color/vote_button_unselected"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:enabled="false" />
    </RelativeLayout>

</LinearLayout>
