<!--
  ~ Copyright (C) 2015 MilderJoghurt
  ~
  ~ This file is part of Realtime Lecture Feedback for Android.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ See COPYING, CONTRIBUTORS for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.milderjoghurt.rlf.android.StudentLiveAnswerFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnVoteA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/VoteFragButtonA"
            android:textSize="40sp"
            android:background="@drawable/answer_button_bg" />

        <Button
            android:id="@+id/btnVoteB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/VoteFragButtonB"
            android:textSize="40sp"
            android:background="@drawable/answer_button_bg" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btnVoteC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/VoteFragButtonC"
            android:textSize="40sp"
            android:background="@drawable/answer_button_bg" />

        <Button
            android:id="@+id/btnVoteD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/VoteFragButtonD"
            android:textSize="40sp"
            android:background="@drawable/answer_button_bg" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <Button
        android:id="@+id/btnVoteSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/VoteFragSendTxt"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>
